--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -45,4 +48,25 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+:root {
+	--highlight-green: #81FE88;
+	--pastel-green: #BFFFC3;
+	--dark-green: #132E35;
+	--graphite: #01080E;
+	--dark-gray: #171D1F;
+	--gray: #3E3E3F;
+	--medium-gray: #888888;
+	--light-gray: #BCBCBC;
+	--offwhite: #E1E1E1;
+	--white: #FFFFFF;
+
+	--font-primary: "Prompt", sans-serif;
+}
+
+body {
+	font-family: var(--font-primary);
+	background-color: var(--graphite);
+	padding: 56px 360px 0 360px;
 }
